--- a/main.html
+++ b/main.html
@@ -7,12 +7,21 @@
 </head>
 
 <body>
+   <!DOCTYPE html>
+<html>
+<head>
+    <title>2x2 Grid</title>
+</head>
+<body>
     <div class="holder">
-    	<div class="item item-1">1</div>
-    	<div class="item item-2">2</div>
-    	<div class="item item-3">3</div>
-    	<div class="item item-4">4</div>
-   </div>
+        <div class="item-1">Item 1</div>
+        <div class="item-2">Item 2</div>
+        <div class="item-3">Item 3</div>
+        <div class="item-4">Item 4</div>
+    </div>
+</body>
+</html>
+
    <script type="text/javascript" src="./script.js">
 </script>
 
